# infosalud

./: .env  .gitignore  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  test.py
.langgraph_api/: .langgraph_ops.pckl
src/agents/: graph.py
src/agents/support/: graph.py  state.py
src/voice_pipeline/: __init__.py  __main__.py  config.py  main.py  state.py
src/voice_pipeline/agentic/: langgraph_client.py
src/voice_pipeline/audio/: __init__.py  mic.py  playback.py
src/voice_pipeline/llm/: __init__.py  langgraph_client.py
src/voice_pipeline/stt/: __init__.py  deepgram_live.py
src/voice_pipeline/tts/: __init__.py  elevenlabs_stream.py
src/voice_pipeline/utils/: __init__.py  logging.py
src/voice_pipeline/vad/: __init__.py  silero.py
