[project]
name = "console-voice-assistant"
version = "0.1.0"
description = "Asistente de voz por consola con Deepgram STT/TTS + OpenAI + barge-in"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk==3.11.0",
    "openai>=1.40.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "agent",
  "graph",
  "tools"
]



